--- a/data/run1/bf.cfg
+++ b/data/run1/bf.cfg
@@ -42,7 +42,7 @@ Vbb = -60.0			# Back bias
 Vparallel_lo = -8.0		# Parallel Low Voltage
 Vparallel_hi = 4.0		# Parallel High Voltage
 Vserial_lo = -4.0		# Serial Low Voltage
-Vserial_lo = 6.0		# Serial High Voltage
+Vserial_hi = 6.0		# Serial High Voltage
 Vscupper = 19.0 		# Scupper voltage
 GateOxide = 0.15                # Gate Oxide thickness in microns
 CollectingPhases = 2            # 1=One Parallel gate High, 2=Two Parallel gates High 
