--- a/data/run1/bf.cfg
+++ b/data/run1/bf.cfg
@@ -12,14 +12,14 @@
 # Poisson solver constants
 # These control the numerics of the Poisson solver
 # They should not need to be changed
-w = 1.9  			# Successive Over-Relaxation factor
-ncycle = 128			# Number of smoothing cycles at finest resolution
+w = 1.8 			# Successive Over-Relaxation factor
+ncycle = 32			# Number of smoothing cycles at finest resolution
 iterations = 1			# Number of VCycles
 
 #  ------------------------------------------------------------------------------
 # Overall setup - these control the size and scale of the simulated volume
 
-ScaleFactor = 2    	   	# Power of 2 that sets the grid size
+ScaleFactor = 1    	   	# Power of 2 that sets the grid size
 # ScaleFactor = 1 means grid size is 0.625 micron, 160 grids in the z-direction
 # ScaleFactor = 2 cuts grid size by a actor of 2
 # ScaleFactor = 4 cuts grid size by a actor of 4, etc. 
@@ -36,25 +36,24 @@ SimulationRegionLowerLeft = 5.0 5.0	  # Allows adjustment of X, Y coordinates
 			    	# The value of (5.0, 5.0) centers the PixelBoundaryRegion
 				# in the SimulationRegion
 #  ------------------------------------------------------------------------------
-# Voltages and Charges - these should be self-explanatory
 
+# Voltages and Charges - these should be self-explanatory
 Vbb = -60.0			# Back bias
 Vparallel_lo = -8.0		# Parallel Low Voltage
 Vparallel_hi = 4.0		# Parallel High Voltage
 Vserial_lo = -4.0		# Serial Low Voltage
 Vserial_hi = 6.0		# Serial High Voltage
 Vscupper = 19.0 		# Scupper voltage
-GateOxide = 0.15                # Gate Oxide thickness in microns
+GateOxide = 0.14                # Gate Oxide thickness in microns
 CollectingPhases = 2            # 1=One Parallel gate High, 2=Two Parallel gates High 
-
 BackgroundDoping = -1.0E12 	# Background doping in cm^-3
 ChannelStopDoping = -2.0E12	# Channel Stop doping in cm^-2
-ChannelStopProfile = 0		# 0 = Square profile, 1 = Gaussian profile
-ChannelStopDepth = 2.0		# Channel stop depth in microns
+ChannelStopProfile = 1		# 0 = Square profile, 1 = Gaussian profile
+ChannelStopDepth = 1.2		# Channel stop depth in microns
 ChannelStopWidth = 2.0		# ChannelStop width in microns
-ChannelDoping = 0.8E12		# Channel doping in cm^-2
-ChannelProfile = 0		# 0 = Square profile, 1 = Gaussian profile
-ChannelDepth = 1.0		# Channel depth in microns
+ChannelDoping = 1.0E12		# Channel doping in cm^-2
+ChannelProfile = 1		# 0 = Square profile, 1 = Gaussian profile
+ChannelDepth = 0.18		# Channel depth in microns
 UndepletedChannelStop = 0	# 0 = No undepleted Region, 1 = undepleted Region 
 Vchannelstop = 0.0		# Voltage in undepleted channel stop
 
@@ -67,15 +66,15 @@ NumberofPixelRegions = 1	  	  # 1
 PixelRegionLowerLeft_0 = 0.0 0.0	  # 
 PixelRegionUpperRight_0 = 110.0 110.0	  #
 NumberofFilledWells_0 = 1		  #
-CollectedCharge_0_0 = 	200000		  # Collected charge in e- 
+CollectedCharge_0_0 = 	100000		  # Collected charge in e- 
 FilledPixelCoords_0_0 = 55.0 55.0	  # (x,y) coords of pixel center
 
-CollectedChargeZmin = 0.65		  # These parameters allow you to set the location of the initial collected charge
-CollectedChargeZmax = 0.90		  #
-CollectedChargeXmin = 1.2		  #
-CollectedChargeXmax = 8.8		  # 
-CollectedChargeYmin = 1.66		  #
-CollectedChargeYmax = 8.34		  # 
+CollectedChargeZmin = 0.48		  # These parameters allow you to set the location of the initial collected charge
+CollectedChargeZmax = 0.52		  #
+CollectedChargeXmin = 3.0		  #
+CollectedChargeXmax = 7.0		  # 
+CollectedChargeYmin = 2.4		  #
+CollectedChargeYmax = 7.6		  # 
 #  ------------------------------------------------------------------------------
 # Constant Voltage Regions - this allows a number of regions of fixed surface potential
 # Each Constant Voltage region will need its extents defined
@@ -87,10 +86,10 @@ NumberofFixedRegions = 0
 ElectronZ0Area = 95.0      	      	   # Starting z value of electron for Area/Vertex plots. 100.0 is at the incident light
 	     				   # surface.
 LogEField = 1	 	       	      	   # 0 - don't calculate E-Field, 1 - Calculate and store E-Field
-LogPixels = 0				   # 0 - don't calculate boundaries, 1 - calculate and store boundaries
+LogPixels = 1				   # 0 - don't calculate boundaries, 1 - calculate and store boundaries
 LogPixelPaths = 0			   # 0 - only the final (z~0) point is logged, 1 - Entire path is logged
 PixelAreas = -1				   # -1 - Don't calculate areas, N - calculate areas every nth step 
-NumVertices = 8 			   # Number of vertices per side for the pixel area calculation.
+NumVertices = 32 			   # Number of vertices per side for the pixel area calculation.
 	      				   # Since there are also 4 corners, there will be:
 					   # (4 * NumVertices + 4) vertices in each pixel
 					   
@@ -136,3 +135,4 @@ outputfilebase 	= BF_256_9x9
 EdgePlot = 0				# Tells plot program whether it is the edge of the array
 PlotEField = 0				# Tells plot program whether or not to plot E-field in Summary plot.
 SaveData = 1 				# 0 - Save only Pts data, N - Save all data every Nth step
+SaveElec = 1 				# 0 - Save only Pts data, N - Save Elec data every Nth step
