--- a/data/run2/bf.cfg
+++ b/data/run2/bf.cfg
@@ -8,6 +8,7 @@
 #
 # Poisson Solver configuration file
 
+VerboseLevel = 1  # 0 - minimal output, 1 - normal, 2 - more verbose.
 
 # Poisson solver constants
 # These control the numerics of the Poisson solver
@@ -22,7 +23,7 @@ iterations = 1			# Number of VCycles
 ScaleFactor = 2    	   	# Power of 2 that sets the grid size
 # ScaleFactor = 1 means grid size is 0.625 micron, 160 grids in the z-direction
 # ScaleFactor = 2 cuts grid size by a actor of 2
-# ScaleFactor = 4 cuts grid size by a actor of 4, etc. 
+# ScaleFactor = 4 cuts grid size by a actor of 4, etc.
 
 PixelSize = 10.0  	     	# Pixel size in microns
 GridsPerPixel = 16		# Number of grids per pixel at ScaleFactor = 1
@@ -45,7 +46,7 @@ Vserial_lo = -4.0		# Serial Low Voltage
 Vserial_hi = 6.0		# Serial High Voltage
 Vscupper = 19.0 		# Scupper voltage
 GateOxide = 0.14                # Gate Oxide thickness in microns
-CollectingPhases = 2            # 1=One Parallel gate High, 2=Two Parallel gates High 
+CollectingPhases = 2            # 1=One Parallel gate High, 2=Two Parallel gates High
 BackgroundDoping = -1.0E12 	# Background doping in cm^-3
 ChannelStopDoping = -2.0E12	# Channel Stop doping in cm^-2
 ChannelStopProfile = 1		# 0 = Square profile, 1 = Gaussian profile
@@ -54,7 +55,7 @@ ChannelStopWidth = 2.0		# ChannelStop width in microns
 ChannelDoping = 1.0E12		# Channel doping in cm^-2
 ChannelProfile = 1		# 0 = Square profile, 1 = Gaussian profile
 ChannelDepth = 0.18		# Channel depth in microns
-UndepletedChannelStop = 0	# 0 = No undepleted Region, 1 = undepleted Region 
+UndepletedChannelStop = 0	# 0 = No undepleted Region, 1 = undepleted Region
 Vchannelstop = 0.0		# Voltage in undepleted channel stop
 
 #  ------------------------------------------------------------------------------
@@ -63,18 +64,18 @@ Vchannelstop = 0.0		# Voltage in undepleted channel stop
 # Each pixel region will need its extents defined
 # Within each pixel region, one can fill multiple collecting wells with arbitrary amounts of charge
 NumberofPixelRegions = 1	  	  # 1
-PixelRegionLowerLeft_0 = 0.0 0.0	  # 
+PixelRegionLowerLeft_0 = 0.0 0.0	  #
 PixelRegionUpperRight_0 = 110.0 110.0	  #
 NumberofFilledWells_0 = 1		  #
-CollectedCharge_0_0 = 	100000		  # Collected charge in e- 
+CollectedCharge_0_0 = 	100000		  # Collected charge in e-
 FilledPixelCoords_0_0 = 55.0 55.0	  # (x,y) coords of pixel center
 
 CollectedChargeZmin = 0.48		  # These parameters allow you to set the location of the initial collected charge
 CollectedChargeZmax = 0.52		  #
 CollectedChargeXmin = 3.0		  #
-CollectedChargeXmax = 7.0		  # 
+CollectedChargeXmax = 7.0		  #
 CollectedChargeYmin = 2.4		  #
-CollectedChargeYmax = 7.6		  # 
+CollectedChargeYmax = 7.6		  #
 #  ------------------------------------------------------------------------------
 # Constant Voltage Regions - this allows a number of regions of fixed surface potential
 # Each Constant Voltage region will need its extents defined
@@ -88,11 +89,11 @@ ElectronZ0Area = 95.0      	      	   # Starting z value of electron for Area/Ve
 LogEField = 1	 	       	      	   # 0 - don't calculate E-Field, 1 - Calculate and store E-Field
 LogPixels = 1				   # 0 - don't calculate boundaries, 1 - calculate and store boundaries
 LogPixelPaths = 0			   # 0 - only the final (z~0) point is logged, 1 - Entire path is logged
-PixelAreas = -1				   # -1 - Don't calculate areas, N - calculate areas every nth step 
+PixelAreas = -1				   # -1 - Don't calculate areas, N - calculate areas every nth step
 NumVertices = 32 			   # Number of vertices per side for the pixel area calculation.
 	      				   # Since there are also 4 corners, there will be:
 					   # (4 * NumVertices + 4) vertices in each pixel
-					   
+
 PixelBoundaryTestType = 1		   # 0 - Run a grid of equally spaced electrons,
 		      			   # 1 - Run a random set of electrons with a Gaussian pattern
 					   # 2 - Run a random set of electrons inside PixelBoundary
@@ -105,10 +106,10 @@ PixelBoundaryUpperRight = 100.0 100.0
 PixelBoundaryNx = 9	   	      	      	 # Number of pixels in postage stamp
 PixelBoundaryNy = 9	   	      	      	 # Number of pixels in postage stamp
 
-Sigmax = 10.0					 # Sigma of incoming light profile 
-Sigmay = 10.0					 # Sigma of incoming light profile 
-Xoffset = 0.0					 # Center offset of incoming light profile 
-Yoffset = 0.0					 # Center offset of incoming light profile 
+Sigmax = 10.0					 # Sigma of incoming light profile
+Sigmay = 10.0					 # Sigma of incoming light profile
+Xoffset = 0.0					 # Center offset of incoming light profile
+Yoffset = 0.0					 # Center offset of incoming light profile
 
 NumElec = 0					 # Number of electrons to be traced between field recalculation
 	  					 # Also used if PixelBoundaryTestType = 2
@@ -124,7 +125,7 @@ DiffMultiplier = 1.0			   # Used to adjust the amount of diffusion.
 NumDiffSteps = 1			   # A speed/accuracy trade-off. A value of 1 uses the theoretical diffusion
 	       				   # step.  A higher value takes larger steps. I have done a few tests
 					   # but I recommend using a value of 1 unless you test larger values.
-SaturationModel = 0			   # Saturation Model 1=On, 0=Off; Experimental!					   
+SaturationModel = 0			   # Saturation Model 1=On, 0=Off; Experimental!
 # The parameters below would be used if PixelBoundaryTestType = 0
 PixelBoundaryStepSize = 0.2 0.2
 
