Save phi,rho and do area calculations every 10 steps

--- a/data/run4/bf.cfg
+++ b/data/run4/bf.cfg
@@ -87,10 +87,10 @@ NumberofFixedRegions = 0
 
 ElectronZ0Area = 95.0      	      	   # Starting z value of electron for Area/Vertex plots. 100.0 is at the incident light
 	     				   # surface.
-LogEField = 1	 	       	      	   # 0 - don't calculate E-Field, 1 - Calculate and store E-Field
+LogEField = 0                  # 0 - don't calculate E-Field, 1 - Calculate and store E-Field
 LogPixels = 0				   # 0 - don't calculate boundaries, 1 - calculate and store boundaries
 LogPixelPaths = 0			   # 0 - only the final (z~0) point is logged, 1 - Entire path is logged
-PixelAreas = 100			   # -1 - Don't calculate areas, N - calculate areas every nth step
+PixelAreas = 10			   # -1 - Don't calculate areas, N - calculate areas every nth step
 NumVertices = 8 			   # Number of vertices per side for the pixel area calculation.
 	      				   # Since there are also 4 corners, there will be:
 					   # (4 * NumVertices + 4) vertices in each pixel
@@ -136,4 +136,5 @@ outputfiledir 	= data/run4
 outputfilebase 	= BF_256_9x9
 EdgePlot = 0				# Tells plot program whether it is the edge of the array
 PlotEField = 0				# Tells plot program whether or not to plot E-field in Summary plot.
-SaveData = 20 				# 0 - Save only Pts data, N - Save all data every Nth step
+SaveData = 10 				# 0 - Save only Pts data, N - Save all data every Nth step
+SaveElec = 1
